src/adapters/tui/widgets/snapshots/rustain__adapters__tui__widgets__plan_card__tests__snapshot_failed_with_skipped_downstream.snap
---
source: src/adapters/tui/widgets/plan_card.rs
expression: text
---
╔══════════════════════════════════════════════════════════════════════════════╗
║                               Plan: Exec Plan                                ║
╠══════════════════════════════════════════════════════════════════════════════╣
║  1. Init ✓ (5s)                                                            ║
║  2. Build ✗ (5s)                                                           ║
║  3. Test                                                                     ║
║  4. Deploy                                                                   ║
║  [completed 22:14:20]                                                        ║
╚══════════════════════════════════════════════════════════════════════════════╝
