src/adapters/tui/widgets/snapshots/rustain__adapters__tui__widgets__plan_card__tests__snapshot_mid_execution_plan_card.snap
---
source: src/adapters/tui/widgets/plan_card.rs
expression: text
---
╔══════════════════════════════════════════════════════════════════════════════╗
║                               Plan: Exec Plan                                ║
╠══════════════════════════════════════════════════════════════════════════════╣
║  1. Init ✓ (5s)                                                            ║
║  2. Build                                                                    ║
║  3. Test                                                                     ║
║  4. Deploy                                                                   ║
║  [approved 22:14:20]                                                         ║
╚══════════════════════════════════════════════════════════════════════════════╝
