src/adapters/tui/widgets/snapshots/rustain__adapters__tui__widgets__plan_card__tests__snapshot_plan_card_with_delegation_badge.snap
---
source: src/adapters/tui/widgets/plan_card.rs
expression: text
---
╔══════════════════════════════════════════════════════════════════════════════╗
║                               Plan: Exec Plan                                ║
╠══════════════════════════════════════════════════════════════════════════════╣
║  1. Init ✓ (5s)                                                            ║
║  2. Build [delegated → code-reviewer]                                                                    ║
║  3. Test                                                                     ║
║  4. Deploy                                                                   ║
║  [approved 22:14:20]                                                         ║
╚══════════════════════════════════════════════════════════════════════════════╝
